--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -1,31 +1,39 @@
+
 .CreateTodoButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
   position: sticky;
   bottom: 3.2rem;
-  width: 6.4rem;
   height: 6.4rem;
-  display: block;
   padding: 1.6rem;
-  margin-left: auto;
+  margin: 0 auto;
   box-shadow: 0 0 6.4rem rgba(0,0,0,1);
-  display: grid;
-  place-items: center;
   border-radius: 1.6rem;
   background-color: var(--glass-background);
   border: var(--glass-border);
   backdrop-filter: var(--glass-blur);
   cursor: pointer;
+  font-size: 1.8rem;
+  color: var(--text-color);
+  font-weight: normal;
+}
+.CreateTodoButton.sticky{
+  width: 6.4rem;
+  margin: 0;
+  margin-left: auto;
 }
 .CreateTodoButton::before {
   content: "";
   display: block;
-  width: 6.4rem;
+  width: 100%;
   height: 6.4rem;
   position: absolute;
-  border-radius: 100%;
+  border-radius: 1.6rem;
   z-index: -1;
   filter: blur(1rem);
   background: var(--green-gradient);
-  transform: scale(0.8) rotate(45deg);
   transform-origin: center;
   transition: transform .2s ease-in-out;
 }
