--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -1,10 +1,10 @@
 .TodoItem {
   width: 100%;
   padding: 1.6rem;
-  border-radius: 1.6rem;
   background-color: var(--glass-background);
   backdrop-filter: var(--glass-blur);
   border: var(--glass-border);
+  border-radius: 1.6rem;
   font-size: 1.6rem;
   color: var(--text-color);
   display: grid;
@@ -24,11 +24,11 @@
   border-radius: 1.2rem;
   padding: 0;
   transform-origin: center;
-  transition: border .2s ease-in-out;
+  transition: border 0.2s ease-in-out;
   cursor: pointer;
 }
 .TodoItem_btn:hover {
-  border: 1px solid rgba(255,255,255,0.2);
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 .TodoItem_btn::before {
   content: "";
@@ -41,7 +41,7 @@
   filter: blur(0.5rem);
   transform: scale(0);
   transform-origin: center;
-  transition: transform .2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 .TodoItem_btn-check::before {
   background: var(--green-gradient);
@@ -52,4 +52,37 @@
 .TodoItem_btn:hover::before {
   transform: scale(1);
 }
-
+.TodoItem.completed {
+  text-decoration: line-through;
+}
+.TodoItem.completed .TodoItem_btn-check {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+.TodoItem.completed .TodoItem_btn-check::before {
+  transform: scale(1);
+}
+.TodoItem.loading {
+  height: 6rem;
+}
+.TodoItem.loading{
+  animation: todoitemloading 1.5s infinite forwards;
+}
+.TodoItem.loading:nth-child(2){
+  animation-delay: 0.2s;
+}
+.TodoItem.loading:nth-child(3){
+  animation-delay: 0.4s;
+}
+.TodoItem.loading:nth-child(4){
+  animation-delay: 0.6s;
+}
+@keyframes todoitemloading {
+  0%{
+    opacity: 1;
+  }50%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
